[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,24 @@
 <html>
+    <head>
+    <title>article-two|swadique</title>
+    </head>
+    <body>
+        <div><a href="/">home</a></div>
+        <hr/>
+        <div>
+            <h3>article-two</h3>
+        </div>
+        <div>19 FEB 2018</div>
+        <div>
+            <p>this is my  arcle.i create this article to test my first url accessible page.this is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible page
+            </p>
+        </div>
+        <div>
+            <p>this is my first arcle.i create this article to test my first url accessible page.this is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible page
+            </p>
+        </div>
+        
+    </body>
+    
 </html>
+
