[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,13 +1,13 @@
 <html>
 
     <head>
-    <title>article-one|swadique</title>
+    <title>article-three|swadique</title>
     </head>
     <body>
         <div><a href="/">home</a></div>
         <hr/>
         <div>
-            <h3>article-one</h3>
+            <h3>article-three</h3>
         </div>
         <div>19 FEB 2018</div>
         <div>
