--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,6 +2,7 @@
     <head>
     <title>article-one|swadique</title>
     </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <body>
         <div><a href="/">home</a></div>
         <hr/>
