[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <title>article-two|swadique</title>
+    <meta name="viewport" width="device-width ,initial-scale=1"/>
     </head>
     <body>
         <div><a href="/">home</a></div>
