--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,6 +2,7 @@
 
     <head>
     <title>article-three|swadique</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
         <div><a href="/">home</a></div>
