[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,13 +4,15 @@
     <title>article-three|swadique</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-       .container{
-           max-width:800px;
-           color:grey;
-           background-color:grey;
-           margin:0 auto;
-           font-family:sans-serif;
-       } 
+         .container {
+    max-width: 800px;
+    color: #796766;
+    margin: 0 auto;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
     </style>
     </head>
     <body>
