[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,8 +2,20 @@
     <head>
     <title>article-two|swadique</title>
     <meta name="viewport" width="device-width ,initial-scale=1"/>
+    <style>
+           .container {
+    max-width: 800px;
+    color: #796766;
+    margin: 0 auto;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+    </style>
     </head>
     <body>
+        <div class="container">
         <div><a href="/">home</a></div>
         <hr/>
         <div>
@@ -18,7 +30,7 @@
             <p>this is my first arcle.i create this article to test my first url accessible page.this is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible pagethis is my first arcle.i create this article to test my first url accessible page
             </p>
         </div>
-        
+        </div>
     </body>
     
 </html>
