--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,17 +2,7 @@
     <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>article-one|swadique</title>
-    <style>
-           .container {
-    max-width: 800px;
-    color: #796766;
-    margin: 0 auto;
-    font-family: sans-serif;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-    </style>
+    <link href="/ui/style.css" rel="stylesheet">
     </head>
     
     <body>
