[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,23 +3,13 @@
     <head>
     <title>article-three|swadique</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <style>
-         .container {
-    max-width: 800px;
-    color: #796766;
-    margin: 0 auto;
-    font-family: sans-serif;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-    </style>
+    <link href="/ui/style.css" rel="stylesheet">
     </head>
     <body>
       <div class="container">
         <div><a href="/">home</a></div>
         <hr/>
-        <div>
+        <div> 
             <h3>article-three</h3>
         </div>
         <div>19 FEB 2018</div>
