[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,15 +3,7 @@
     <title>article-two|swadique</title>
     <meta name="viewport" width="device-width ,initial-scale=1"/>
     <style>
-           .container {
-    max-width: 800px;
-    color: #796766;
-    margin: 0 auto;
-    font-family: sans-serif;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+  <link href="/ui/style.css" rel="stylesheet">
     </style>
     </head>
     <body>
