[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,7 +3,7 @@
     <title>article-two|swadique</title>
     <meta name="viewport" width="device-width ,initial-scale=1"/>
     <style>
-  <link href="/ui/style.css" rel="stylesheet">
+  <link href="/ui/style.css" rel="stylesheet"/>
     </style>
     </head>
     <body>
