[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
 	<h4>A new headind</h4>
 i have made some local edits
         </div>
-        <script>alert("thisis javascript")</script>
+        <script>alert("this is javascript");</script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
