--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="main-text" class="center text-big bold">
             Hi! I am Mohamed Swadique,and this is my first webapp.
 	<h4>A new headind</h4>
 i have made some local edits
