[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,22 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id='madi' class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class=container>
+        <div id='propic' class="center">
+            <img src="https://www.filmibeat.com/malayalam/news/2017/dulquer-salmaan-birthday-spl-5-upcoming-movies-dq-that-will-take-him-to-the-next-level-266529.html" class="img-medium"/>
+            <hr/>
         </div>
         <br>
         <div id='main-text' class="center text-big bold">
-            Hi! I am Mohamed Swadique,and this is my first webapp.
-	<h4>A new headind</h4>
-i have made some local edits
+	<h3>Personel</h3>
+Hi,i am Dulquer Salman
+<hr/>
+<h3>Professional</h3>
+I am a Malayalam actor.
         </div>
-        <script>alert("this is javascript");</script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        </div>
     </body>
 </html>
