--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class=container>
         <div id='propic' class="center">
-            <img src="https://www.filmibeat.com/malayalam/news/2017/dulquer-salmaan-birthday-spl-5-upcoming-movies-dq-that-will-take-him-to-the-next-level-266529.html" class="img-medium"/>
+            <img src="https://www.filmibeat.com/img/2017/07/xdulquersalmaanbirthdayspecial-28-1501222841.jpg.pagespeed.ic.qc8yVnUkg2.jpg"/>
             <hr/>
         </div>
         <br>
