[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,8 @@ Hi,i am Dulquer Salman
 <h3>Professional</h3>
 I am a Malayalam actor.
         </div>
+        <div class=footer>
+            </div>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
