[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,8 @@ Hi,i am Dulquer Salman
 I am a Malayalam actor.
         </div>
         <div class=footer>
-            </div>
+            This button <button id="counter">click me</button> has been clicked <span id=count>0</span>times
+        </div>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
