--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class=footer>
             <hr/>
-            This button <button id="counter">click me</button> has been clicked <span id=count>0</span> times
+            This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
