--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,14 @@
             <hr/>
             This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times
         </div>
-        
+        <hr/>
+        <input type='text' id='name' placeholder='name'></input>
+        <input type='submit' value='Submit' id='submit_btn' ></input>
+        <ul>
+            <li>name1</li>
+            <li>name2</li>
+            <li>name3</li>
+        </ul>        
         <script type="text/javascript" src="/ui/main.js">
         </script>
         </div>
