[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <div class=container>
-        <div id='propic' class="center">
-            <img src="https://www.filmibeat.com/img/2017/07/xdulquersalmaanbirthdayspecial-28-1501222841.jpg.pagespeed.ic.qc8yVnUkg2.jpg"/>
-            <hr/>
-        </div>
-        <br>
-        <div id='main-text' class="center text-big bold">
-	        <h3>Personel</h3>
+            <div id='propic' class="center">
+                <img src="https://www.filmibeat.com/img/2017/07/xdulquersalmaanbirthdayspecial-28-1501222841.jpg.pagespeed.ic.qc8yVnUkg2.jpg"/>
+                <hr/>
+            </div>
+            <br>
+            <div id='main-text' class="center text-big bold">
+	            <h3>Personel</h3>
             Hi,i am Dulquer Salman
             <hr/>
             <h3>Professional</h3>
@@ -22,8 +22,8 @@
             This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times
         </div>
         <hr/>
-        <input type='text' id='name' placeholder='name'></input>
-        <input type='submit' value='Submit' id='submit_btn' ></input>
+        <input type='text' id='name' placeholder='name'>
+        <input type='submit' value='Submit' id='submit_btn' >
         <ul id='namelist'>
         
         </ul>        
