--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
             This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times
         </div>
         <hr/>
-        <input type='text' id='name' placeholder='name'>
+        <input type="text" id='name' placeholder='name'>
         <input type='submit' value='Submit' id='submit_btn' >
         <ul id='namelist'>
         
