--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
             <h3>Professional</h3>
             I am a Malayalam actor.
             </div>
-            <div class=footer>
+            <div class=center class=footer>
                 <hr/>
                 This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times
             </div>
@@ -26,7 +26,7 @@
             <input type='submit' value='Submit' id='submit_btn' >
             <ul id='namelist'>
             </ul>        
-            <script type="text/javascript" src="/ui/main.js">
+            <script class=center type="text/javascript" src="/ui/main.js">
             </script>
         </div>
     </body>
