[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
             <h3>Professional</h3>
             I am a Malayalam actor.
             </div>
-            <div class=center class=footer>
+            <div  class="footer centre" >
                 <hr/>
                 This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times
             </div>
