[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,15 +17,14 @@
             <h3>Professional</h3>
             I am a Malayalam actor.
             </div>
-            <div  class="footer centre" >
+            <div>
                 <hr/>
-                This button <button id="counter">click me</button> has been clicked <span id="count">0</span> times
+                <h3>login for awesome features</h3>
+                <input type="text" id="username" placeholder="username"/>
+                <input type="password" id="password"/>
+                <input type="submit" id="submit_btn"/>
+                
             </div>
-            <hr/>
-            <input type="text" id='name' placeholder='name'>
-            <input type='submit' value='Submit' id='submit_btn' >
-            <ul id='namelist'>
-            </ul>        
             <script class=center type="text/javascript" src="/ui/main.js">
             </script>
         </div>
