--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
                 <h3>login for awesome features</h3>
                 <input type="text" id="username" placeholder="username"/>
                 <input type="password" id="password"/>
-                <input type="Submit" id="submit_btn"/>
+                 <input type="submit" id="submit_btn"/>
                 
             </div>
             <script class=center type="text/javascript" src="/ui/main.js">
