[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,8 +21,11 @@
                 <hr/>
                 <h3>login for awesome features</h3>
                 <input type="text" id="username" placeholder="username"/>
+                <br/>
                 <input type="password" id="password"/>
                  <input type="submit" value="login" id="submit_btn"/>
+                 <br/>
+                 <input type="submit" value="logout"/>
                 
             </div>
             <script class=center type="text/javascript" src="/ui/main.js">
