[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
                 <input type="password" id="password"/>
                  <input type="submit" value="login" id="submit_btn"/>
                  <br/>
-                 <input type="submit" value="logout"/>
+                 <input type="submit" value="logout" id="logout_btn"/>
                 
             </div>
             <script class=center type="text/javascript" src="/ui/main.js">
